[package]
name = "monty_hall"
version = "0.1.0"
edition = "2021"

[profile.release]
strip=true
lto=true
codegen-units=1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
rand="^0.8.5"
